2007-02-04  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/sip.cpp, src/endpoints/h323.cpp: Fixed potential
	problem due to uninitialized value.

2007-02-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: New PWLIB_REC version.

2007-02-04  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/h323.cpp, src/endpoints/manager.h,
	src/endpoints/sip.h, src/endpoints/h323.h, 
	src/endpoints/manager.cpp, src/endpoints/sip.cpp:
	Applied patch from Andre Kirchner <supercroc1974 AT yahoo.com> to
	adapt to the new OPAL API. Thanks !

2007-02-04  Damien Sandras  <dsandras@gnome.org>

	* src/devices/audio.cpp: Fixed missing upper case.

2007-02-04  Damien Sandras  <dsandras@gnome.org>

	* src/devices/audio.cpp: Use more internal buffers for sound events.
	Fixes issues with some soundcards.

2007-01-30  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp, src/gui/statusicon.cpp: Fix startup crash on
	WIN32/non-GNOME version (wrong NULL ptrs in menu definitions) - thanks
	to Andre Kirchner <supercroc1974 AT yahoo.com>!

2007-01-26  Jan Schampera <jan.schampera@unix.net>

	* src/endpoints/urlhandler.cpp, src/endpoints/manager.cpp,
	src/endpoints/sip.cpp: Fixed a security	vulnerability (format strings)
	when using gm_main_window_flash_message(). Thanks to the Mu Security
	Team for that report (www.musecurity.com)!

2007-01-21  Jan Schampera <jan.schampera@unix.net>

	* src/gui/addressbook.cpp: Hopefully fix previous commit by adding an
	include-directive (W32-build issues).

2007-01-21  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Fix weird hotkey behaviour produced by popup-menus
	that were not updated when sensitivity was changed for the main
	menu (fixes #374189)

2007-01-21  Jan Schampera <jan.schampera@unix.net>

	* configure.in, src/gui/main.cpp: Bump GTK+ version check to >=2.6.0
	and remove <2.6-specific codeblocks

	* src/gui/addressbook.cpp: Make addressbook window hide on ESC (part
	of #337494)
